--- a/app/src/main/res/layout/layout_movie_poster.xml
+++ b/app/src/main/res/layout/layout_movie_poster.xml
@@ -22,12 +22,13 @@
                 android:id="@+id/imagePoster"
                 android:layout_width="113dp"
                 android:layout_height="170dp"
-                app:imageUrl="@{movie.poster_path}"
                 android:scaleType="centerCrop"
+                app:imageUrl="@{movie.poster_path}"
                 tools:src="@tools:sample/backgrounds/scenic" />
 
-            <include layout="@layout/layout_poster_text_rating"
-                app:movie="@{movie}"/>
+            <include
+                layout="@layout/layout_poster_text_rating"
+                app:movie="@{movie}" />
 
 
         </RelativeLayout>
