--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_homeFragment_to_discoverFragment"
             app:destination="@id/discoverFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_detailMediaContentFragment"
+            app:destination="@id/detailMediaContentFragment" />
     </fragment>
 
     <fragment
@@ -67,5 +70,13 @@
         <action
             android:id="@+id/action_discoverFragment_to_searchFragment"
             app:destination="@id/searchFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailMediaContentFragment"
+        android:name="com.example.cinemates.views.fragment.DetailMediaContentFragment"
+        android:label="DetailMediaContentFragment" >
+        <argument
+            android:name="movie"
+            app:argType="com.example.cinemates.model.Movie" />
     </fragment>
 </navigation>
